Baseline for migration from spring boot 2.7(jdk 1.8/java EE 8) to 3.0 (jdk 17/jakarta 10)