@@ -9,6 +9,7 @@ import lombok.AllArgsConstructor;
 import javax.validation.Valid;
 
 import lombok.extern.slf4j.Slf4j;
+import org.hibernate.query.Query;
 import org.modelmapper.ModelMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -19,6 +20,7 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.net.URI;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -37,7 +39,7 @@ public class AntiHeroController {
     public ResponseEntity<AntiHeroDto> create(@Valid @RequestBody AntiHeroDto dto) {
         AntiHero created = antiHeroService.createAntiHero(modelMapper.map(dto, AntiHero.class));
         AntiHeroDto responseDto = modelMapper.map(created, AntiHeroDto.class);
-        var location = ServletUriComponentsBuilder.fromCurrentRequest().path("/{id}").buildAndExpand(created.getId()).toUri();
+        URI location = ServletUriComponentsBuilder.fromCurrentRequest().path("/{id}").buildAndExpand(created.getId()).toUri();
 
         return ResponseEntity.created(location).body(responseDto);
     }
@@ -62,16 +64,16 @@ public class AntiHeroController {
         int toSkip = pageable.getPageSize() * pageable.getPageNumber();//
         //SLF4J
         log.info("Using SLF4J: Getting anti hero list - getAntiHeroes()");
-        var antiHeroes = StreamSupport
+        List<AntiHero> antiHeroes = StreamSupport
                 .stream(antiHeroService.getAllAntiHeroes().spliterator(), false)
                 .skip(toSkip)
                 .limit(pageable.getPageSize())
-                .toList();
+                .collect(Collectors.toList());
 
         List<AntiHeroDto> dtos = antiHeroes
             .stream()
             .map(entity -> modelMapper.map(entity, AntiHeroDto.class))
-            .toList();
+            .collect(Collectors.toList());
         return ResponseEntity.ok(dtos);
     }
 
